# Nexoryx

./: .gitignore  CLAUDE.md  README.md  bootstrap.py  install.sh  plan.txt  pyproject.toml  sync.sh
src/nexoryx/: __init__.py  __main__.py  cli.py
src/nexoryx/agents/: __init__.py  base.py  security.py  training.py
src/nexoryx/brain/: __init__.py  interface.py
src/nexoryx/daemon/: __init__.py  server.py
src/nexoryx/interfaces/: __init__.py  tui.py
src/nexoryx/interfaces/gui/: __init__.py  app.py
src/nexoryx/interfaces/telegram/: __init__.py  auth.py  bot.py
src/nexoryx/memory/: __init__.py  persona.py  personalities.py  store.py
src/nexoryx/orchestrator/: __init__.py  bus.py  fc_runner.py  orchestrator.py
src/nexoryx/platform/: __init__.py  config.py  detect.py  profile.py  scanner.py  usage.py
src/nexoryx/router/: __init__.py  base.py  registry.py  router.py
src/nexoryx/router/providers/: __init__.py  anthropic.py  echo.py  gemini.py  (+2 more)
src/nexoryx/tools/: __init__.py  audit.py  base.py  browser.py  code.py  computer.py  filesystem.py  permissions.py  registry.py  sandbox.py  terminal.py  web.py
src/nexoryx/training/: __init__.py  admin.py  dataset.py  eval.py  house.py  on_exit.py  scheduler.py  synthetic.py  train.py
tests/: test_brain.py  test_features.py  test_memory.py  test_platform.py  test_tools.py  test_training.py
training/modelfiles/: nex_admin.modelfile
web/: install.sh.template  nexoryx-daemon.service  nexoryx-web.service  serve.sh
web/public/: index.html  install.html  install.ps1
web/public/assets/: copy.js  styles.css
(+3 files in other folders)
