[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexoryx"
version = "0.0.1"
description = "Hochmodulares, lokal + cloudfähiges Multi-Agenten-KI-Framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Benluca1" }]
# Kern (platform/CLI/doctor) läuft ohne Abhängigkeiten. Schwergewichtige
# Features kommen als optionale Extras (Phasen 1+).
dependencies = []

[project.optional-dependencies]
# Phase 1+: lokale/Cloud-Inferenz, Daemon, Telegram
runtime = [
  "typer>=0.12",
  "rich>=13",
  "prompt_toolkit>=3.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "httpx>=0.27",
]
local = ["llama-cpp-python>=0.2"]
cloud = ["anthropic>=0.40", "openai>=1.40", "google-genai>=0.3"]
telegram = ["python-telegram-bot>=21"]
gui = ["pywebview>=5.0"]
dev = ["pytest>=8"]

[project.scripts]
nexoryx = "nexoryx.cli:main"
nex = "nexoryx.cli:main"
nexoryx-gui = "nexoryx.interfaces.gui:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
